@@ -1,6 +1,8 @@
 2012-05-18  Arjen Markus  <arjenmarkus@users,sourceforge.net>
 	* plotpack.tcl: Correct regular expression to extract the canvas name (it was too greedy; patch by Frank)
 	* plotpriv.tcl: Remove overwritten version of GetCanvas (the proper one is in plotpack.tcl)
+	* plotchart.tcl: Introduce the private procedure CopyScalingData to remove an incompatibility with 
+			 previous versions
 
 2012-05-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
 	* plotaxis.tcl: Correct drawing of time-axis - labels were sometimes drawn to the right
